--- a/week3/package.json
+++ b/week3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week2",
+  "name": "week3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
